[metadata]
name = spacetrack
author = Nathan L. Toner
author-email = engineerolabs@gmail.com
description = A Python API for querying space-track.org
description-file = README.rst
project_urls =
    Source Code = https://github.com/Engineero/space_track_api
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Utilities
keywords =
    space
    spacetrack
    elset
    tle
    satellite
